[package]
name = "downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
iex_protocols = {path = "../../iex_protocols", version = "1.0.0"}

smoltcp = {version = "0.13.0", default-features = false, features = ["socket-raw", "socket-udp", "socket-tcp", "proto-ipv4", "proto-ipv6", "medium-ip", "medium-ethernet"]}
pcap-parser = {version = "0.17.0", features = ["data"], default-features = false}
postcard = {version = "1.1.3", features = ["alloc"], default-features = false}
reqwest = { version = "0.13.3", features = ["json", "blocking", "stream", "rustls"], default-features = false}
async-compression = {version = "0.4.42", features = ["tokio", "gzip"], default-features = false}


tokio = { version = "1.52.2", features = ["rt", "rt-multi-thread", "net", "time", "macros", "fs", "io-util"], default-features = false}
tokio-util = {version = "0.7.18", default-features = false}
futures = {version = "0.3.32", features = ["executor"], default-features = false}

serde = {version = "1.0.228", features = ["serde_derive"], default-features = false}
serde_json = {version = "1.0.149", default-features = false}
chrono = {version = "0.4.44", features = ["serde"], default-features = false}

rand = {version = "0.10.1", features = ["thread_rng"], default-features = false}

